[gd_scene load_steps=9 format=2]

[ext_resource path="res://TitleScreenTempBGBlack.jpg" type="Texture" id=1]
[ext_resource path="res://Themes/buttons_v2.tres" type="Theme" id=2]
[ext_resource path="res://Instructions.gd" type="Script" id=3]
[ext_resource path="res://UI/ReturnToHomeButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/8-bit-operator/8bitOperatorPlus-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/8-bit-operator/8bitOperatorPlus8-Bold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 17
font_data = SubResource( 3 )

[node name="InstructionsAIComplex" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = 2.0
margin_right = 467.0
margin_bottom = 337.0
rect_pivot_offset = Vector2( 24, 102 )
texture = ExtResource( 1 )
expand = true

[node name="Button" type="Button" parent="."]
margin_left = 159.0
margin_top = 275.0
margin_right = 320.0
margin_bottom = 304.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Ready"

[node name="PlaySpeedLabel" type="RichTextLabel" parent="."]
margin_left = 18.0
margin_top = 53.0
margin_right = 188.0
margin_bottom = 69.0
custom_fonts/normal_font = SubResource( 4 )
text = "Play Speed:"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 15.0
margin_top = 115.0
margin_right = 216.0
margin_bottom = 131.0
custom_fonts/normal_font = SubResource( 4 )
text = "Exploitation Rate:"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 17.0
margin_top = 167.0
margin_right = 206.0
margin_bottom = 183.0
custom_fonts/normal_font = SubResource( 4 )
text = "Learning Rate:"

[node name="PlaySpeed" type="HSlider" parent="."]
margin_left = 197.0
margin_top = 53.0
margin_right = 391.0
margin_bottom = 69.0
min_value = 1.0
max_value = 5.0
value = 3.0
tick_count = 5
ticks_on_borders = true

[node name="ExploitationRate" type="SpinBox" parent="."]
margin_left = 222.0
margin_top = 110.0
margin_right = 296.0
margin_bottom = 134.0
max_value = 1.0
step = 0.01
value = 0.9

[node name="LearningRate" type="SpinBox" parent="."]
margin_left = 222.0
margin_top = 164.0
margin_right = 296.0
margin_bottom = 188.0
max_value = 1.0
step = 0.01
value = 0.1

[node name="ReturnToHomeButton" parent="." instance=ExtResource( 4 )]

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 376.0
margin_top = 264.0
margin_right = 445.0
margin_bottom = 288.0
text = "Debug"

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="value_changed" from="PlaySpeed" to="." method="_on_PlaySpeed_value_changed"]
[connection signal="value_changed" from="ExploitationRate" to="." method="_on_ExploitationRate_value_changed"]
[connection signal="value_changed" from="LearningRate" to="." method="_on_LearningRate_value_changed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
